--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,1 +1,84 @@
-<p>footer works!</p>
+<!-- Footer -->
+<footer class="text-center text-lg-start  text-muted footer_style p-5">
+  <!-- Section: Social media -->
+  <!-- <section class="d-flex justify-content-center justify-content-lg-between">
+  
+    <div>
+      
+        <img src="../../../assets/images/Frame 1001.png" class="w-100">
+
+    </div>
+  
+  </section> -->
+  <!-- Section: Social media -->
+
+  <!-- Section: Links  -->
+  <section class="border-bottom">
+    <div class="container text-center text-md-start mt-5">
+      <!-- Grid row -->
+      <div class="row mt-3">
+        <!-- Grid column -->
+        <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+          <!-- Content -->
+          <img src="../../../assets/images/Frame 1006.png" class="w-100">
+        </div>
+        <!-- Grid column -->
+
+        <!-- Grid column -->
+        <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+          <!-- Links -->
+          <h6 class="text-uppercase fw-bold mb-4 text_style">Our Product</h6>
+          <p class="text_style">Career</p>
+          <p class="text_style">Car</p>
+          <p class="text_style">Packages</p>
+          <p class="text_style">Features</p>
+          <p class="text_style">Priceline</p>
+        </div>
+        <!-- Grid column -->
+
+        <!-- Grid column -->
+        <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
+          <!-- Links -->
+          <h6 class="text-uppercase fw-bold mb-4 text_style">Resources</h6>
+          <p class="text_style">Download</p>
+          <p class="text_style">Help Centre</p>
+          <p class="text_style">Guides</p>
+          <p class="text_style">Partner Network</p>
+          <p class="text_style">Cruises</p>
+          <p class="text_style">Developer</p>
+        </div>
+
+        <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
+          <!-- Links -->
+          <h6 class="text-uppercase fw-bold mb-4 text_style">About Rentcars</h6>
+          <p class="text_style">Our Story</p>
+          <p class="text_style">Investor Relations</p>
+          <p class="text_style">Press Center</p>
+          <p class="text_style">Advertise</p>
+          <p class="text_style">Cruises</p>
+          <p class="text_style">Developer</p>
+        </div>
+        <!-- Grid column -->
+
+        <!-- Grid column -->
+        <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+        <img src="../../../assets/images/Frame 1001.png" class="w-100">
+         
+        </div>
+        <!-- Grid column -->
+      </div>
+      <!-- Grid row -->
+    </div>
+  </section>
+  <!-- Section: Links  -->
+
+  <!-- Copyright -->
+  <div class=" p-4 text_style">
+    Copyright 2023 ・
+    <a class="text-reset fw-bold text_style" 
+      > Rentcars, All Rights Reserved</a
+    >
+  </div>
+  <!-- Copyright -->
+</footer>
+<!-- Footer -->
